# RomaoApp

./: .gitignore  NOTES.TXT  __init__.py  app_window.py  database.py  image_bank_dialog.py  image_folder_watcher.py  main.py  main.spec  main_window.py  new_page.py  page1.py  page2.py  page3.py  page_manager.py  page_type_popup.py  popup_dialogs.py  pyproject.toml  requirements.txt  widgets_names.py
gui/: main_window.ui  main_window_topbar_scroll.ui  main_window_ui.py  page2.ui  page3.ui  page_type_popup.ui
gui/resources/fonts/static/: BebasNeue-Regular.ttfZone.Identifier
gui/resources/icons/: user-check.svgZone.Identifier
gui/resources/logos/: small.pngZone.Identifier
srcs/database/: database.py
srcs/download_handlers/: __init__.py  download_basic_page.py
srcs/images_handlers/: __init__.py  image_bank_dialog.py
srcs/page_handlers/: __init__.py  page1.py  page2.py  page3.py  page_manager.py
srcs/popups_handlers/: __init__.py  page_type_popup.py  popup_dialogs.py
srcs/utils/: __init__.py  widgets_names.py
srcs/window_handler/: __init__.py  app_window.py  main_window.py  main_window_cpy.py
ui/: main_window_topbar_scroll.ui  page1.ui
ui/resources/: resources.qrc
ui/resources/fonts/static/: Montserrat-BoldItalic.ttfZone.Identifier
ui/resources/logos/: small.icoZone.Identifier
