[project]
name = "romaosportsnutrition"
version = "0.1.0"
description = "This is a desktop app to aid a sports nutritionist build her meal plans for clients."
authors = [
    {name = "Carolina Bastos"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "attrs (==24.3.0)",
    "backports-tarfile (==1.2.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2024.12.14)",
    "chardet (==5.2.0)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "coloredlogs (==15.0.1)",
    "crashtest (==0.4.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.7)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.17.0)",
    "flatbuffers (==24.12.23)",
    "humanfriendly (==10.0)",
    "idna (==3.10)",
    "imageio (==2.36.1)",
    "importlib-metadata (==8.6.1)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jsonschema (==4.23.0)",
    "jsonschema-specifications (==2024.10.1)",
    "keyring (==25.6.0)",
    "lazy-loader (==0.4)",
    "llvmlite (==0.43.0)",
    "more-itertools (==10.6.0)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.0)",
    "networkx (==3.4.2)",
    "numba (==0.60.0)",
    "numpy (==2.0.2)",
    "onnxruntime (==1.20.1)",
    "opencv-python (==4.11.0.86)",
    "opencv-python-headless (==4.11.0.86)",
    "packaging (==24.2)",
    "pillow (==11.1.0)",
    "pkginfo (==1.12.0)",
    "platformdirs (==4.3.6)",
    "poetry (==2.0.1)",
    "poetry-core (==2.0.1)",
    "pooch (==1.8.2)",
    "protobuf (==5.29.3)",
    "pymatting (==1.1.13)",
    "pypdf2 (==3.0.1)",
    "pyproject-hooks (==1.2.0)",
    "pyqt6 (==6.4.2)",
    "pyqt6-plugins (==6.4.2.2.3)",
    "pyqt6-qt6 (==6.4.3)",
    "pyqt6-tools (==6.4.2.3.3)",
    "pyqt6-sip (==13.9.1)",
    "pyreadline3 (==3.5.4)",
    "python-dotenv (==1.0.1)",
    "pywin32-ctypes (==0.2.3)",
    "qt6-applications (==6.4.3.2.3)",
    "qt6-tools (==6.4.3.1.3)",
    "rapidfuzz (==3.11.0)",
    "referencing (==0.36.1)",
    "rembg (==2.0.61)",
    "reportlab (==4.2.5)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "rpds-py (==0.22.3)",
    "scikit-image (==0.25.0)",
    "scipy (==1.15.1)",
    "shellingham (==1.5.4)",
    "sympy (==1.13.3)",
    "tifffile (==2025.1.10)",
    "tomli (==2.2.1)",
    "tomlkit (==0.13.2)",
    "tqdm (==4.67.1)",
    "trove-classifiers (==2025.1.15.22)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "virtualenv (==20.29.1)",
    "watchdog (==6.0.0)",
    "zipp (==3.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
